<resources>
    <string name="app_name">wechat</string>
    <string name="action_settings">Settings</string>

    <string name="wife">老婆</string>
    <string name="hello">你好</string>
    <string name="wecaht_id">微信号：gpfduduo</string>

    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="contacts">通讯录</string>
    <string name="chat">微信</string>
    <string name="add_friend">添加好友</string>
    <string name="radar">雷达加好友</string>
    <string name="add_nearby">添加身边的朋友</string>
    <string name="friend_circle">朋友圈</string>
    <string name="game">游戏</string>
    <string name="shop">购物</string>
    <string name="public_id">公众号</string>
    <string name="public_detail">获取更多资讯和服务</string>
    <string name="face_to_face">面对面建群</string>
    <string name="face_to_face_detail">与身边的好友进入同一个群聊</string>
    <string name="action_qrcode_detail">扫描二维码名片</string>

    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">公众号</string>
    <string name="search">搜索</string>

    <string name="action_add">添加好友</string>
    <string name="action_card">收付款</string>
    <string name="action_qrcode">扫一扫</string>
    <string name="action_setting">设置</string>
    <string name="action_fragment_stack">Fragment栈信息打印</string>
    <string name="scan_title">二维码/条形码</string>

    <string name="circle_little_video">小视频</string>
    <string name="circle_take_photo">拍照</string>
    <string name="circle_select_from_photo">从手机相册选择</string>
    <string name="circle_cancel">取消</string>
    <string name="circle_complete">完成</string>
    <string name="circle_change_bk">更换相册封面</string>
    <string name="all_photo">所有照片</string>
    <string name="back">返回</string>
    <string name="photo">图片</string>
    <string name="preview">预览</string>
    <string name="just">刚刚</string>

    <string name="friend_circle_content">雨停了，公交车倒是没有了，什么情况！</string>

    <string name="me_album">相册</string>
    <string name="me_collect">收藏</string>
    <string name="me_money">钱包</string>
    <string name="me_card">卡包</string>
    <string name="me_smile">表情</string>
    <string name="me_setting">设置</string>
    <string name="scan_hint">将二维码/条形码放入框中，即可自动扫描</string>

    <string name="photos">照片</string>
    <string name="takephoto">拍摄</string>
    <string name="takevideo">小视频</string>
    <string name="chatvideo">视频聊天</string>
    <string name="giftmoney">红包</string>
    <string name="backcheck">转账</string>
    <string name="location">位置</string>
    <string name="personal_card">个人名片</string>
    <string name="chat_audio">语音聊天</string>
    <string name="audio_input">语音输入</string>
    <string name="press_to_record">按住拍</string>

    <string name="camera_open_error">启动相机失败</string>
    <string name="photo_preview">PhotoPreview</string>
    <string name="take_photo">TakePhoto</string>
    <string name="display_to_gallery">显示到相册</string>
    <string name="not_specify_a_directory">未指定存储目录</string>
    <string name="help">帮助</string>
    <string name="help_content">当前权限被禁用，建议到设置界面开启权限!</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>

</resources>
